--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h3>asdasdasd</h3>
-    <p>Welcome to <%= title %></p>
+    <p style="align-right">Welcome to <%= title %></p>
   </body>
 </html>
